Fixed close button functionality excluding once glitch.

--- a/templates/clear-field.html.twig
+++ b/templates/clear-field.html.twig
@@ -1,2 +1,2 @@
 {{ attach_library('clear_field/clear_field') }}
-<div class="{{ span_class }}"><a class="close {{ a_class }}" href="#" ></a></div>
+<span class="{{ span_class }}"><a class="close {{ a_class }}" href="#" ></a></span>
